--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -7,16 +7,6 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:background="@color/colorAccent"
-    tools:context="com.project.kongdy.lockscreen.MainActivity">
+    tools:context="com.project.kongdy.lockscreen.HomeActivity">
 
-    <Button
-        android:id="@+id/startBtn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/start"
-        android:textColor="@color/white"
-        android:background="@color/black"
-        android:layout_centerInParent="true"
-        />
 </RelativeLayout>
